--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -60,8 +60,12 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
+$accent-blue: #A6DAE9;
+$accent-orange: #FC601F;
+$accent-orange-hover: #E2561C;
 $body-background: $white;
-$body-font-color: $black;
+$container-background: #f7f7f7;
+$body-font-color: #4A4A4A;
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
@@ -139,7 +143,7 @@ $code-font-weight: $global-weight-normal;
 $code-background: $light-gray;
 $code-border: 1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
-$anchor-color: $primary-color;
+$anchor-color: $body-font-color;
 $anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
 $anchor-text-decoration: none;
 $anchor-text-decoration-hover: none;
