--- a/scss/partials/_landing.scss
+++ b/scss/partials/_landing.scss
@@ -1,13 +1,14 @@
-.full-width {
-   margin-left: auto;
-   margin-right: auto;
-   max-width: initial;
-   width: 100%;
-}
-
 .hero {
   background-color: #ccc;
-  height: 30rem;
+  max-height: 35rem;
+  overflow: hidden;
+
+  img {
+    filter: brightness(30%);
+    transform: translateY(-35%);
+    width: 100%;
+    z-index: -10;
+  }
 }
 
 nav {
@@ -17,4 +18,9 @@ nav {
   top: 0;
   transform: translateX(-50%);
   width: 100%;
+  z-index: 10;
+
+  a, ul {
+    color: $white;
+  }
 }
