final stretch duuuuuuuuuude

--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -4,7 +4,19 @@
   padding-bottom: 9rem;
 
   .links {
-    margin-top: 3rem;
+    margin-top: 4rem;
+  }
+
+  .contact {
+    margin-top: 2.5rem;
+  }
+
+  span {
+    font-size: 1.75rem;
+  }
+
+  img {
+    width: 200px;
   }
 }
 
