--- a/scss/partials/_button.scss
+++ b/scss/partials/_button.scss
@@ -1,4 +1,5 @@
-button {
+button,
+.cta {
   background: $accent-orange;
   border-radius: 4rem;
   color: $white;
@@ -10,5 +11,18 @@ button {
 
   &:hover {
     background-color: $accent-orange-hover;
+  }
+}
+
+.cta {
+  color: $white;
+  height: auto;
+  padding: 1.5rem 6rem;
+  width: auto;
+}
+
+@media screen and (max-width: 640px) {
+  .cta {
+    padding: 1rem 4.5rem;
   }
 }
