--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -13,3 +13,12 @@ h3 {
 h4 {
   font-weight: bold;
 }
+
+a {
+  border-bottom: 1px solid rgba(255,255,255,0);
+  transition: border-bottom .3s ease-in-out;
+
+  &:not(.cta):hover {
+    border-bottom: 1px solid rgba(255,255,255,1);
+  }
+}
