--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -18,7 +18,7 @@ a {
   border-bottom: 1px solid rgba(255,255,255,0);
   transition: border-bottom .3s ease-in-out;
 
-  &:not(.cta):hover {
+  &:not(.cta):not(.more):hover {
     border-bottom: 1px solid rgba(255,255,255,1);
   }
 }
